# sumo_squat_counter

./: .env.example  .env_old  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  heroku.yml  mypy.ini  pyproject.toml  pyrightconfig.json
obschartpybackend/: __main__.py
obschartpybackend/sumo_squat_counter/: __main__.py  this is old maini file.py  waitasecond__main__.py
python-project/: EDA_EMIS.ipynb
python-project/.ipynb_checkpoints/: EDA_EMIS-checkpoint.ipynb
scripts/: test.sh
tests/: test_obschartpybackend.py
