[tool.poetry]
name = "obschartpybackend"
version = "1.0.0"
description = ""
authors = ["ObsChart <contact@obschart.co.uk>"]

[tool.poetry.dependencies]
python = "^3.6.8"
obschart = "^0.22.0"
python-dotenv = "^0.12.0"
matplotlib = "^3.2.1"
pandas = "^1.0.3"
pillow = "^7.1.2"
imgkit = "^1.0.2"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-watch = "^4.2.0"
black = "^19.10b0"
mypy = "^0.770"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
